# worldcup-forecaster

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-fetch.yml  inplay.yml  pre-match-lock.yml
backtest/: metrics.py  plots.py  walk_forward.py
cli/: backtest.py  kelly.py  market_stats.py  odds.py  predict.py  schedule.py  tournament.py
data/: calibrator.joblib  fixtures_2026.parquet  historical_matches.parquet  live_events.json  params_cache.json  polymarket_odds.json  predictions.parquet  results.parquet  squad_values.json  tournament.json  wc2022_xg.json  wc2026_xg.json
docs/: index.html
model/: calibrate.py  elo.py  features.py  form.py  inplay.py  lineup.py  markets.py  poisson.py  predict.py  rest.py
reports/: backtest_results.parquet  dashboard.html  reg_tuning.json  track_record.md
scripts/: enrich_backtest_markets.py  fetch_fixtures.py  fetch_historical.py  fetch_live_events.py  fetch_odds.py  fetch_results.py  fetch_statsbomb_xg.py  fetch_xg_2026.py  fit_calibrator.py  generate_html_dashboard.py  generate_track_record.py  predict_all_fixtures.py  refit_params.py  run_backtest.py  simulate_tournament.py  tune_regularization.py
tests/: test_model.py
